2002-10-15  Andreas Kupries  <andreask@pliers.activestate.com>

	* configure.in: Changed to propagate an initial CFLAGS value to
	  the final definition. A TEA condition (SHARED_BUILD == 1)
	  squashed it, causing it the build system to loose the
	  +DAportable we specify for the AS PA-RISC2.2 build host. This is
	  a problem for _all_ TEA and TEA 2 based configure files.

2002-10-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* configure.in: move TEA_PATH_X below TEA_CONFIG_CFLAGS as it can
	mess with the configure results.

	* unix/tktable.spec (new): RPM spec file. (fontaine)

	* demos/tktable.py: added a contributed tktable wrapper for
	Python/Tkinter from Klaus Roethemeyer.

2002-09-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: correct tkTable.tcl.h target to work with FreeBSD's
	default make.

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c: 
	* generic/tkTable.h: added support for building on OS X (steffen)

2002-06-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: call cygpath on INCLUDES $(srcdir)/generic.

	* tests/all.tcl: minor cleanup

	* tests/tkTable.test (table-30.1):
	* generic/tkTableEdit.c (Table_EditCmd): fixed problem where row
	insertion could segfault. [Bug #487747]

2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure: Enabled COFF as well as CV style debug info with
	--enable-symbols to allow Dr. Watson users to see function info.
	More info on debugging levels can be obtained at:
	http://msdn.microsoft.com/library/en-us/dnvc60/html/gendepdebug.asp

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved use of DESTDIR in install targets.
	Removed need for installdirs target.
	Broke TCLSH_PROG into TCLSH_ENV and TCLSH_PROG with TCLSH var and
	added comments about TCLSH_ENV.
	Added default shell and gdb targets.

	* tclconfig/tcl.m4:
	* configure: 
	* configure.in: updated to new TEA base that: prefixes all macros